FIX/component/ColorInput: better visibility using box-shadow

--- a/src/components/ColorInput.sass
+++ b/src/components/ColorInput.sass
@@ -1,5 +1,4 @@
 .color-input
-  /* min-width: 60px
   min-height: 60px
   flex-grow: 1
   background: var(--color-bg)
@@ -17,6 +16,8 @@
     .color-preview-wrapper
       cursor: pointer
       transform: scale(1.2)
+      .color-preview
+        box-shadow: 0 3px 30px rgba(0, 0, 0, 0.2)
 
   .input
     display: none
@@ -33,3 +34,5 @@
       width: 100%
       min-height: 100%
       border-radius: 100%
+      box-shadow: 0 1px 10px rgba(0, 0, 0, 0.05)
+      transition: box-shadow 300ms ease
